<resources>
    <string name="app_name">gggg</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">運動囉</string>
    <string name="type">運動類型</string>
    <string name="cal">計算卡路里</string>
    <string name="title_activity_cal">CAL</string>

    <string name="clear">清除</string>
    <string name="pass">略過</string>
    <string name="ok">完成</string>

    <string name="bs_value">血糖數值 : </string>
    <string name="bs_in">請輸入測得血糖值</string>
    <string name="bs_unit">mg/dl</string>
    <string name="weight">體重 : </string>
    <string name="kilogram">公斤 </string>

    <string name="high_press"> 收縮壓(高) : </string>
    <string name="low_press"> 收縮壓(低) : </string>
    <string name="press_unit"> mmHg</string>
    <string name="heartbeat"> 心跳 : </string>
    <string name="hb_unit"> bpm</string>

    <string name="recordtime">記錄時間 : </string>
    <string name="text_tvDateTime">時間 </string>
    <string name="pickday"> 選擇日期 </string>
    <string name="picktime"> 選擇時間</string>
    <string name="sure">確認並儲存</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
