<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".chang_an.AddPressure"
    >

    <TextView
        android:id="@+id/收縮壓high"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/etHigh"
        app:layout_constraintVertical_bias="0.055"
        android:text="@string/high_press"
        android:textSize="25sp"
        tools:layout_width="wrap_content" />

    <EditText
        android:id="@+id/etHigh"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/收縮壓high"
        app:layout_constraintRight_toLeftOf="@+id/單位1"
        app:layout_constraintVertical_bias="0.05"
        android:layout_weight="1"
        android:hint="收縮壓(高的)"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textColorHint="#ff8c00"
        />

    <TextView
        android:id="@+id/單位1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/etHigh"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.06"
        android:layout_weight="1"
        android:text="@string/press_unit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/收縮壓low"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_press"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etLow"
        app:layout_constraintTop_toBottomOf="@+id/收縮壓high"
        app:layout_constraintVertical_bias="0.08"
        tools:layout_width="wrap_content" />

    <EditText
        android:id="@+id/etLow"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="收縮壓(低的)"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textColorHint="#ff8c00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/收縮壓low"
        app:layout_constraintRight_toLeftOf="@id/單位2"
        app:layout_constraintTop_toBottomOf="@id/etHigh"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/單位2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_unit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/etLow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/單位1"
        app:layout_constraintVertical_bias="0.087" />

        <TextView
            android:id="@+id/心跳"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/收縮壓low"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/etHeart"
            app:layout_constraintVertical_bias="0.087"
            android:text="@string/heartbeat"
            android:textSize="25sp"
            tools:layout_width="wrap_content" />

    <EditText
        android:id="@+id/etHeart"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="心跳"
        android:inputType="numberDecimal"
        android:maxLength="3"
        android:textColorHint="#ff8c00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/心跳"
        app:layout_constraintRight_toLeftOf="@id/單位3"
        app:layout_constraintTop_toBottomOf="@id/etLow"
        app:layout_constraintVertical_bias="0.081" />

        <TextView
            android:id="@+id/單位3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/單位2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/etHeart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.096"
            android:text="@string/hb_unit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp" />

    <Button
        android:id="@+id/清除"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/略過"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <Button
        android:id="@+id/略過"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/清除"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/med11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.9"
        />

</android.support.constraint.ConstraintLayout>